Fix checkstyle erros in atlasdb-tests-shared